--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="font-awesome.min.css">
   <link rel="stylesheet" href="bootstrap.min.css">
-  <title>{{title}}</title>
+  <title>ROLO</title>
 </head>
 <body>
   <div id="root"></div>
