--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="font-awesome.min.css">
-  <link rel="stylesheet" href="bootstrap.min.css">
+  <link rel="stylesheet" href="/font-awesome.min.css">
+  <link rel="stylesheet" href="/bootstrap.min.css">
   <title>ROLO</title>
 </head>
 <body>
   <div id="root"></div>
-  <script src="app.js" charset="utf-8"></script>
+  <script src="/app.js" charset="utf-8"></script>
 </body>
 </html>
