--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
   <link rel="stylesheet" href="/font-awesome.min.css">
-  <link rel="stylesheet" href="/bootstrap.min.css">
+  <link rel="stylesheet" href="/flexboxgrid.min.css">
+  <link rel="stylesheet" href="/app.css">
   <title>ROLO</title>
 </head>
 <body>
