--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,12 @@
   <link rel="stylesheet" href="/font-awesome.min.css">
   <link rel="stylesheet" href="/flexboxgrid.min.css">
   <link rel="stylesheet" href="/app.css">
+  <script src="https://use.typekit.net/afj0fjb.js"></script>
+  <script>try{Typekit.load({ async: true });}catch(e){}</script>
   <title>ROLO</title>
 </head>
 <body>
+
   <div id="root"></div>
   <script src="/app.js" charset="utf-8"></script>
 </body>
